Fixes #4 - Enhancement/explicitize (#37)
* Remove TMDB from top level rebuild

* add repr for Judgment

* Which tmdb json for movies

* make downloads explicit per directory

* Forgot download fixes

* Take file obj, not filename

* setup to explicit reset, create feature set

* Fix notebook judgment opening

* Missed a setup -> explicit call

* Fix netfix notebooks judg. access

* Stupid paren

* Fix feature creation on need a bigger bot

* change feature creation in netfix ES

* wrong featureset used

* filename to file obj

* correct feature store name

* Correct feature config name

* Download ranky before training

* Remove breakpoint

* Remove special download functions

--- a/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
+++ b/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
@@ -14,7 +14,10 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "download();"
+    "corpus='http://es-learn-to-rank.labs.o19s.com/blog.jsonl'\n",
+    "judgments='http://es-learn-to-rank.labs.o19s.com/osc_judgments.txt'\n",
+    "\n",
+    "download([corpus, judgments], dest='data/');"
    ]
   },
   {
@@ -89,6 +92,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = {\n",
     "    \"featureset\": {\n",
     "        \"features\": [\n",
@@ -226,9 +231,7 @@
     "   }\n",
     "}\n",
     "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='blog', featureset='test')"
+    "client.create_featureset(index='blog', name='test', ftr_config=config)"
    ]
   },
   {
