--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -33,10 +33,15 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "download();\n",
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
     "\n",
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client)"
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "judgments='http://es-learn-to-rank.labs.o19s.com/title_judgments.txt'\n",
+    "download([corpus, judgments], dest='data/');\n",
+    "\n",
+    "movies=indexable_movies(movies='data/tmdb.json')\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
@@ -56,6 +61,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Clear TMDB's LTR\n",
+    "client.reset_ltr(index='tmdb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = {\"validation\": {\n",
     "              \"index\": \"tmdb\",\n",
     "              \"params\": {\n",
@@ -138,10 +155,7 @@
     "    }}\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='title')"
+    "client.create_featureset(index='tmdb', name='title', ftr_config=config)"
    ]
   },
   {
@@ -323,7 +337,8 @@
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title')\n",
     "\n",
-    "judgmentDict = judgments_by_qid(judgments_from_file(filename='data/title_judgments_train.txt'))\n",
+    "with open('data/title_judgments_train.txt') as f:\n",
+    "    judgmentDict = judgments_by_qid(judgments_from_file(f))\n",
     "\n",
     "\n",
     "rambo=judgmentDict[1]\n",
@@ -493,8 +508,8 @@
     "            base_doc['collection_name'] = src_movie['belongs_to_collection']['name']\n",
     "    return base_doc\n",
     "\n",
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client, enrich=add_collection_name)"
+    "movies=indexable_movies(movies='data/tmdb.json', enrich=add_collection_name)\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
@@ -623,11 +638,7 @@
     "            ]\n",
     "    }}\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='title2')\n",
+    "client.create_featureset(index='tmdb', name='title2', ftr_config=config)\n",
     "\n",
     "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client, \n",
@@ -719,6 +730,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = {\"validation\": {\n",
     "              \"index\": \"tmdb\",\n",
     "              \"params\": {\n",
@@ -792,10 +805,7 @@
     "    }}\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='title2')\n",
+    "client.create_featureset(index='tmdb', name='title2', ftr_config=config)\n",
     "\n",
     "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client, \n",
@@ -884,7 +894,8 @@
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title2')\n",
     "\n",
-    "judgmentDict = judgments_by_qid(judgments_from_file(filename='data/title_judgments_train.txt'))\n",
+    "with open('data/title_judgments_train.txt') as f:\n",
+    "    judgmentDict = judgments_by_qid(judgments_from_file(f))\n",
     "\n",
     "for qid, judgments in judgmentDict.items():\n",
     "\n",
