--- a/notebooks/elasticsearch/tmdb/sandbox.ipynb
+++ b/notebooks/elasticsearch/tmdb/sandbox.ipynb
@@ -48,6 +48,8 @@
     "    - Fuzzy matches\n",
     "'''\n",
     "\n",
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = {\n",
     "   \"featureset\": {\n",
     "        \"features\": [\n",
@@ -64,8 +66,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "from ltr import setup\n",
-    "setup(client, index='tmdb', config=config, featureset='sandbox')"
+    "client.create_featureset(index='tmdb', name='sandbox', ftr_config=config)"
    ]
   },
   {
