--- a/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
@@ -19,7 +19,15 @@
     "client = ElasticClient()\n",
     "\n",
     "from ltr import download, index\n",
-    "download(); index.rebuild_tmdb(client)"
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
+    "from ltr import download\n",
+    "\n",
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "download([corpus], dest='data/');\n",
+    "\n",
+    "movies=indexable_movies(movies='data/tmdb.json')\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
@@ -94,6 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = {\n",
     "    \"featureset\": {\n",
     "            \"features\": [\n",
@@ -154,8 +164,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "from ltr.setup import setup\n",
-    "setup(client, index='tmdb', config=config, featureset='genre')"
+    "client.create_featureset(index='tmdb', name='genre', ftr_config=config)"
    ]
   },
   {
