--- a/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
+++ b/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To get to know Solr "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Solr Client"
    ]
   },
@@ -36,10 +43,9 @@
    "source": [
     "from ltr import download\n",
     "\n",
-    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "tmdb_corpus='http://es-learn-to-rank.labs.o19s.com/tmdb_ai_pow_search.json'\n",
     "judgments='http://es-learn-to-rank.labs.o19s.com/title_judgments_binary.txt'\n",
-    "\n",
-    "download([corpus, judgments], dest='data/');"
+    "download([tmdb_corpus, judgments]);"
    ]
   },
   {
@@ -50,8 +56,7 @@
    "source": [
     "from ltr.index import rebuild\n",
     "from ltr.helpers.movies import indexable_movies\n",
-    "\n",
-    "movies=indexable_movies(movies='data/tmdb.json')\n",
+    "movies=indexable_movies(movies='data/tmdb_ai_pow_search.json')\n",
     "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
@@ -103,6 +108,8 @@
     "    }\n",
     "\n",
     "]\n",
+    "\n",
+    "\n",
     "\n",
     "client.create_featureset(index='tmdb', name='title', ftr_config=ftr_config)"
    ]
