--- a/notebooks/solr/tmdb/hello-ltr (Solr).ipynb
+++ b/notebooks/solr/tmdb/hello-ltr (Solr).ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download some requirements"
+    "### Download needed dataset"
    ]
   },
   {
@@ -25,7 +25,9 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "download()"
+    "\n",
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "download([corpus], dest='data/');"
    ]
   },
   {
@@ -60,8 +62,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client)"
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
+    "\n",
+    "movies=indexable_movies(movies='data/tmdb.json')\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
@@ -80,6 +85,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = [\n",
     "  {\n",
     "    \"store\": \"release\", # Note: This overrides the _DEFAULT_ feature store location\n",
@@ -92,8 +99,7 @@
     "]\n",
     "\n",
     "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='release')"
+    "client.create_featureset(index='tmdb', name='release', ftr_config=config)"
    ]
   },
   {
@@ -189,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
