--- a/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
+++ b/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
@@ -18,8 +18,15 @@
     "from ltr.client.solr_client import SolrClient\n",
     "client = SolrClient()\n",
     "\n",
-    "from ltr import download, index\n",
-    "download(); index.rebuild_tmdb(client)"
+    "from ltr import download\n",
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
+    "\n",
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "download([corpus], dest='data/');\n",
+    "\n",
+    "movies=indexable_movies(movies='data/tmdb.json')\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
@@ -94,6 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = [\n",
     "            {\n",
     "                \"store\": \"genre\", # Note: This overrides the _DEFAULT_ feature store location\n",
@@ -129,9 +138,7 @@
     "            }\n",
     "]\n",
     "\n",
-    "\n",
-    "from ltr.setup import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='genre')"
+    "client.create_featureset(index='tmdb', name='genre', ftr_config=config)\n"
    ]
   },
   {
