--- a/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
@@ -32,7 +32,9 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "download()"
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "\n",
+    "download([corpus], dest='data/');"
    ]
   },
   {
@@ -71,8 +73,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client)"
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
+    "\n",
+    "movies=indexable_movies(movies='data/tmdb.json')\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
@@ -92,6 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = {\n",
     "    \"featureset\": {\n",
     "        \"features\": [\n",
@@ -112,9 +119,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='release')"
+    "client.create_featureset(index='tmdb', name='release', ftr_config=config)"
    ]
   },
   {
@@ -205,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
