--- a/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
@@ -38,8 +38,16 @@
     "            base_doc['collection_name'] = src_movie['belongs_to_collection']['name']\n",
     "    return base_doc\n",
     "\n",
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client, enrich=add_collection_name)"
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
+    "from ltr import download\n",
+    "\n",
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "judgments='http://es-learn-to-rank.labs.o19s.com/title_judgments.txt'\n",
+    "download([corpus, judgments], dest='data/');\n",
+    "\n",
+    "movies=indexable_movies(movies='data/tmdb.json', enrich=add_collection_name)\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
@@ -59,6 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = {\"validation\": {\n",
     "              \"index\": \"tmdb\",\n",
     "              \"params\": {\n",
@@ -157,10 +167,7 @@
     "    }}\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='title_rf')"
+    "client.create_featureset(index='tmdb', name='title_rf', ftr_config=config)"
    ]
   },
   {
