--- a/notebooks/solr/tmdb/raw-solr-commands.ipynb
+++ b/notebooks/solr/tmdb/raw-solr-commands.ipynb
@@ -23,10 +23,13 @@
    "source": [
     "# Rebuild the index if necessary\n",
     "from ltr import download\n",
-    "download()\n",
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
     "\n",
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client)"
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "download([corpus], dest='data/')\n",
+    "movies=indexable_movies(movies='data/tmdb.json')\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
