Solr notebooks use FeatureLogger

--- a/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
+++ b/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
@@ -157,15 +157,15 @@
    "outputs": [],
    "source": [
     "from ltr.judgments import judgments_open\n",
-    "from ltr.log import log_query\n",
+    "from ltr.log import FeatureLogger\n",
     "from itertools import groupby\n",
     "\n",
-    "training_set=[]\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genre')\n",
     "with judgments_open('data/genre_by_date_judgments.txt') as judg_list:\n",
     "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
-    "                                                  judgments=query_judgments, feature_set='genre')\n",
-    "        training_set.extend(query_training_set)\n"
+    "        ftr_logger.log_for_qid(qid=qid, \n",
+    "                               judgments=query_judgments,\n",
+    "                               keywords=judg_list.keywords(qid))"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "source": [
     "from ltr.ranklib import train\n",
     "trainLog = train(client, \n",
-    "                 training_set=training_set,\n",
+    "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genre',\n",
     "                 index='tmdb',\n",
@@ -246,20 +246,20 @@
     "                                autoNegate=True)\n",
     "\n",
     "from ltr.judgments import judgments_from_file\n",
-    "from ltr.log import log_query\n",
+    "from ltr.log import FeatureLogger\n",
     "from itertools import groupby\n",
     "\n",
-    "training_set=[]\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genre')\n",
     "with judgments_open('data/genre_by_date_judgments.txt') as judg_list:\n",
-    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
-    "                                                  judgments=query_judgments, feature_set='genre')\n",
-    "        training_set.extend(query_training_set)\n",
+    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(qid=qid, \n",
+    "                               judgments=query_judgments,\n",
+    "                               keywords=judg_list.keywords(qid))\n",
     "        \n",
     "        \n",
     "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 training_set=training_set,\n",
+    "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genre',\n",
     "                 index='tmdb',\n",
