--- a/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
+++ b/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
@@ -128,17 +128,15 @@
    "outputs": [],
    "source": [
     "from ltr.judgments import judgments_open\n",
-    "from ltr.log import log_query\n",
+    "from ltr.log import FeatureLogger\n",
     "from itertools import groupby\n",
     "\n",
-    "training_set=[]\n",
-    "with judgments_open('data/title_judgments_binary.txt') as judg_list:\n",
-    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
-    "                                                  judgments=query_judgments,\n",
-    "                                                  feature_set='title')\n",
-    "        training_set.extend(query_training_set)\n",
-    "        print(\"Got %s Training Samples\" % len(training_set))"
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='title')\n",
+    "with judgments_open('data/title_judgments_binary.txt') as judgments:\n",
+    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(qid=qid, \n",
+    "                               judgments=query_judgments, \n",
+    "                               keywords=judgments.keywords(qid))"
    ]
   },
   {
@@ -193,7 +191,7 @@
     "    features, predictors = pairwise_transform(features, predictors)\n",
     "    return features, predictors.ravel(), scaler\n",
     "\n",
-    "features, predictors, scaler = samples_from_training_data(training_set)\n",
+    "features, predictors, scaler = samples_from_training_data(ftr_logger.logged)\n",
     "features"
    ]
   },
