--- a/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
+++ b/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
@@ -142,17 +142,16 @@
    "outputs": [],
    "source": [
     "from ltr.judgments import judgments_open\n",
-    "from ltr.log import log_query\n",
+    "from ltr.log import FeatureLogger\n",
     "from itertools import groupby\n",
     "\n",
-    "training_set=[]\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genome')\n",
     "with judgments_open('data/genome_judgments.txt') as judg_list:\n",
     "    # For each query's judgments log features, and add to our training set...\n",
     "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
-    "                                                  judgments=query_judgments, feature_set='genome')\n",
-    "        training_set.extend(query_training_set)\n",
-    "        print(\"Got %s Training Samples\" % len(training_set))"
+    "        ftr_logger.log_for_qid(judgments=query_judgments,\n",
+    "                               qid=qid, \n",
+    "                               keywords=judg_list.keywords(qid))"
    ]
   },
   {
@@ -174,7 +173,7 @@
    "source": [
     "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 training_set=training_set,\n",
+    "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genome',\n",
     "                 index='tmdb',\n",
