--- a/notebooks/solr/tmdb/svmrank.ipynb
+++ b/notebooks/solr/tmdb/svmrank.ipynb
@@ -123,18 +123,17 @@
    "outputs": [],
    "source": [
     "from ltr.judgments import judgments_open\n",
-    "from ltr.log import log_query\n",
+    "from ltr.log import FeatureLogger\n",
     "from itertools import groupby\n",
     "\n",
-    "training_set=[]\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='title')\n",
     "with judgments_open('data/title_judgments_binary.txt') as judgments:\n",
     "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
-    "                                                  judgments=query_judgments, \n",
-    "                                                  feature_set='title')\n",
-    "        training_set.extend(query_training_set)\n",
+    "        ftr_logger.log_for_qid(qid=qid, \n",
+    "                               judgments=query_judgments, \n",
+    "                               keywords=judgments.keywords(qid))\n",
     "\n",
-    "training_set"
+    "training_set=ftr_logger.logged"
    ]
   },
   {
