ES notebooks pass

--- a/notebooks/elasticsearch/tmdb/sandbox.ipynb
+++ b/notebooks/elasticsearch/tmdb/sandbox.ipynb
@@ -82,16 +82,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ltr.log import FeatureLogger\n",
     "from ltr.judgments import judgments_open\n",
-    "from ltr.log import log_query\n",
     "from itertools import groupby\n",
     "\n",
-    "training_set=[]\n",
-    "with judgments_open('data/title_judgments.txt') as judg_list:\n",
-    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
-    "                                                  judgments=query_judgments, feature_set='sandbox')\n",
-    "        training_set.extend(query_training_set)"
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='sandbox')\n",
+    "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))\n"
    ]
   },
   {
@@ -115,7 +115,7 @@
     "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
     "                  index='tmdb',\n",
-    "                  training_set=training_set,\n",
+    "                  training_set=ftr_logger.logged,\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
