--- a/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
@@ -183,15 +183,19 @@
    "outputs": [],
    "source": [
     "from ltr.judgments import judgments_open\n",
-    "from ltr.log import log_query\n",
+    "from ltr.log import FeatureLogger\n",
     "from itertools import groupby\n",
     "\n",
-    "training_set=[]\n",
-    "with judgments_open('data/genre_by_date_judgments.txt') as judg_list:\n",
-    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
-    "                                                  judgments=query_judgments, feature_set='genre')\n",
-    "        training_set.extend(query_training_set)"
+    "from ltr.log import FeatureLogger\n",
+    "from ltr.judgments import judgments_open\n",
+    "from itertools import groupby\n",
+    "\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genre')\n",
+    "with judgments_open('data/genre_by_date_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))\n"
    ]
   },
   {
@@ -211,7 +215,7 @@
    "source": [
     "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 training_set=training_set,\n",
+    "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 index='tmdb',\n",
     "                 featureSet='genre',\n",
@@ -266,24 +270,25 @@
    "outputs": [],
    "source": [
     "from ltr import date_genre_judgments\n",
-    "from ltr.log import judgments_to_training_set\n",
     "date_genre_judgments.synthesize(client,\n",
     "                                judgmentsOutFile='data/genre_by_date_judgments.txt',\n",
     "                                autoNegate=True)\n",
     "\n",
-    "training_set=[]\n",
-    "with judgments_open('data/genre_by_date_judgments.txt') as judg_list:\n",
-    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, index='tmdb', \n",
-    "                                                  judgments=query_judgments, \n",
-    "                                                  feature_set='genre')\n",
-    "        training_set.extend(query_training_set)\n",
-    "        print(len(training_set))\n",
+    "from ltr.log import FeatureLogger\n",
+    "from ltr.judgments import judgments_open\n",
+    "from itertools import groupby\n",
+    "\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genre')\n",
+    "with judgments_open('data/genre_by_date_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))\n",
     "        \n",
     "        \n",
     "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 training_set=training_set,\n",
+    "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 index='tmdb',\n",
     "                 featureSet='genre',\n",
