--- a/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
+++ b/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
@@ -248,17 +248,15 @@
    "outputs": [],
    "source": [
     "from ltr.judgments import judgments_open\n",
-    "from ltr.log import log_query\n",
+    "from ltr.log import FeatureLogger\n",
     "from itertools import groupby\n",
     "\n",
-    "training_set=[]\n",
+    "ftr_logger=FeatureLogger(client, index='blog', feature_set='test')\n",
     "with judgments_open('data/osc_judgments.txt') as judgment_list:\n",
-    "    # For each query's judgments log features, and add to our training set...\n",
     "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, index='blog', \n",
-    "                                                  judgments=query_judgments, feature_set='test')\n",
-    "        training_set.extend(query_training_set)\n",
-    "        print(\"Got %s Training Samples\" % len(training_set))"
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))"
    ]
   },
   {
@@ -278,7 +276,7 @@
    "source": [
     "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 training_set=training_set,\n",
+    "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='test',\n",
     "                 index='blog',\n",
