--- a/notebooks/elasticsearch/tmdb/es-ltr-basics-project.ipynb
+++ b/notebooks/elasticsearch/tmdb/es-ltr-basics-project.ipynb
@@ -80,20 +80,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import log_query\n",
+    "from ltr.log import FeatureLogger\n",
     "from ltr.judgments import judgments_open\n",
     "from itertools import groupby\n",
     "\n",
-    "training_set=[]\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='movies')\n",
     "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
-    "    # For each query's judgments log features, and add to our training set...\n",
     "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, \n",
-    "                                                  index='tmdb', \n",
-    "                                                  judgments=query_judgments, \n",
-    "                                                  feature_set='movies')\n",
-    "        training_set.extend(query_training_set)\n",
-    "        print(\"Got %s Training Samples\" % len(training_set))"
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))"
    ]
   },
   {
@@ -104,7 +100,7 @@
    "source": [
     "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
-    "                  training_set=training_set,\n",
+    "                  training_set=ftr_logger.logged,\n",
     "                  index='tmdb',\n",
     "                  featureSet='movies',\n",
     "                  modelName='title')"
