--- a/notebooks/elasticsearch/tmdb/gonna need a bigger bot (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/gonna need a bigger bot (ES).ipynb
@@ -157,18 +157,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import log_query\n",
+    "from ltr.log import FeatureLogger\n",
     "from ltr.judgments import judgments_open\n",
     "from itertools import groupby\n",
     "\n",
-    "training_set=[]\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genome')\n",
     "with judgments_open('data/genome_judgments.txt') as judgment_list:\n",
     "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, \n",
-    "                                                  index='tmdb', \n",
-    "                                                  judgments=query_judgments, \n",
-    "                                                  feature_set='genome')\n",
-    "        training_set.extend(query_training_set)"
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))"
    ]
   },
   {
@@ -190,7 +188,7 @@
    "source": [
     "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 training_set=training_set,\n",
+    "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genome',\n",
     "                 index='tmdb',\n",
