--- a/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
@@ -185,18 +185,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import log_query\n",
+    "from ltr.log import FeatureLogger\n",
     "from ltr.judgments import judgments_open\n",
     "from itertools import groupby\n",
     "\n",
-    "training_set=[]\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='title_rf')\n",
     "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
     "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, \n",
-    "                                                  index='tmdb', \n",
-    "                                                  judgments=query_judgments, \n",
-    "                                                  feature_set='title_rf')\n",
-    "        training_set.extend(query_training_set)"
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))"
    ]
   },
   {
@@ -216,7 +214,7 @@
    "source": [
     "from ltr.ranklib import kcv\n",
     "res  = kcv(client,\n",
-    "            training_set=training_set,\n",
+    "            training_set=ftr_logger.logged,\n",
     "            metric2t='NDCG@10',\n",
     "            leafs=4,\n",
     "            trees=100,\n",
@@ -253,7 +251,7 @@
    "source": [
     "from ltr.ranklib import train\n",
     "res  = train(client,\n",
-    "             training_set=training_set,\n",
+    "             training_set=ftr_logger.logged,\n",
     "             metric2t='NDCG@10',\n",
     "             leafs=4,\n",
     "             trees=100,\n",
