--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -61,16 +61,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clear TMDB's LTR\n",
-    "client.reset_ltr(index='tmdb')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "client.reset_ltr(index='tmdb')\n",
     "\n",
     "config = {\"validation\": {\n",
@@ -173,18 +163,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import log_query\n",
+    "from ltr.log import FeatureLogger\n",
     "from ltr.judgments import judgments_open\n",
     "from itertools import groupby\n",
     "\n",
-    "training_set=[]\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='title')\n",
     "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
     "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, \n",
-    "                                                  index='tmdb', \n",
-    "                                                  judgments=query_judgments, \n",
-    "                                                  feature_set='title')\n",
-    "        training_set.extend(query_training_set)"
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))"
    ]
   },
   {
@@ -204,7 +192,7 @@
    "source": [
     "from ltr.ranklib import feature_search\n",
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               training_set=training_set,\n",
+    "                                               training_set=ftr_logger.logged,\n",
     "                                               metric2t='NDCG@10',\n",
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
@@ -255,7 +243,7 @@
    "source": [
     "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
-    "                  training_set=training_set,\n",
+    "                  training_set=ftr_logger.logged,\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
@@ -292,7 +280,7 @@
    "source": [
     "from ltr.ranklib import feature_search\n",
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               training_set=training_set,\n",
+    "                                               training_set=ftr_logger.logged,\n",
     "                                               metric2t='NDCG@10',\n",
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
@@ -343,7 +331,7 @@
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title')\n",
     "\n",
-    "for qid, query_judgments in groupby(training_set, key=lambda j: j.qid):\n",
+    "for qid, query_judgments in groupby(ftr_logger.logged, key=lambda j: j.qid):\n",
     "    print(qid)\n",
     "    if qid == 1: # Rambo\n",
     "        model = eval_model(modelName='title',\n",
@@ -645,18 +633,16 @@
     "\n",
     "client.create_featureset(index='tmdb', name='title2', ftr_config=config)\n",
     "\n",
-    "from ltr.log import log_query\n",
+    "from ltr.log import FeatureLogger\n",
     "from ltr.judgments import judgments_open\n",
     "from itertools import groupby\n",
     "\n",
-    "training_set=[]\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='title2')\n",
     "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
     "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
-    "        query_training_set, discarded = log_query(client, \n",
-    "                                                  index='tmdb', \n",
-    "                                                  judgments=query_judgments, \n",
-    "                                                  feature_set='title2')\n",
-    "        training_set.extend(query_training_set)"
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))"
    ]
   },
   {
@@ -667,7 +653,7 @@
    "source": [
     "from ltr.ranklib import feature_search\n",
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               training_set=training_set,\n",
+    "                                               training_set=ftr_logger.logged,\n",
     "                                               metric2t='NDCG@10',\n",
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
@@ -699,7 +685,7 @@
    "source": [
     "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
-    "                  training_set=training_set,\n",
+    "                  training_set=ftr_logger.logged,\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
@@ -747,7 +733,7 @@
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title2')\n",
     "\n",
-    "for qid, query_judgments in groupby(training_set, key=lambda j: j.qid):\n",
+    "for qid, query_judgments in groupby(ftr_logger.logged, key=lambda j: j.qid):\n",
     "    print(qid)\n",
     "    if qid == 1: # Rambo\n",
     "        model = eval_model(modelName='title',\n",
